RFA_MilestoneRM01/src/objects/Project_Application_RFA__c.object
<CustomObject>
    <fields>
        <fullName>ABP_Incl_or_Not_incl__c</fullName>
        <label>ABP Incl. or Not incl.</label>
        <picklist>
            <picklistValues>
                <fullName>ABP Incl.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not incl.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_to_pass_Open_issue__c</fullName>
        <label>Activity to pass / Open issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment_Start_Date__c</fullName>
        <label>Adjustment Start Date(Milestone)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BI_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BI_Select__c</fullName>
        <label>BI</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Background_Current_Issue__c</fullName>
        <label>(As-is) Background Current Issue (As-is)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPP_Status__c</fullName>
        <label>CCPP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_No__c</fullName>
        <label>Category No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Title__c</fullName>
        <label>Category Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Select__c</fullName>
        <label>Commercial</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communication_change__c</fullName>
        <label>Communication change management actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conductor__c</fullName>
        <label>Conductor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details_of_solution__c</fullName>
        <label>Details of solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date_Milestone__c</fullName>
        <label>End Date(Milestone)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_benefit_Qantitative__c</fullName>
        <label>Estimated benefit overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Finance_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Select__c</fullName>
        <label>Finance</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Select__c</fullName>
        <label>HR</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Select__c</fullName>
        <label>IT</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_or_with_ATK__c</fullName>
        <label>Individual or with ATK</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep__c</fullName>
        <label>Keep</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L3 Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>L3User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Select__c</fullName>
        <label>Legal</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_No__c</fullName>
        <label>Milestone No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>MilestoneStatus</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denyed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Title__c</fullName>
        <label>Milestone Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opex_or_CAPEX__c</fullName>
        <label>Opex or CAPEX</label>
        <picklist>
            <picklistValues>
                <fullName>Opex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Function_L2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Function (L2)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>L2User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAC_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAC_Select__c</fullName>
        <label>PAC</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaybackPeriodYears__c</fullName>
        <label>Payback period (years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Date__c</fullName>
        <label>Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrimaryCOACategory__c</fullName>
        <inlineHelpText>この申請について当てはまるCOAカテゴリーを最大3つまで選択して下さい。</inlineHelpText>
        <label>Primary COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory2__c</fullName>
        <label>Primary COA Sub Category 2</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory3__c</fullName>
        <label>Primary COA Sub Category 3</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>a. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other intangible assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Funding by shift of funds from an approved current year Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Inventory Count Adjustment (per location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Write-offs and disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Write-downs (incl. flush out)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. New location, Extension of existing location or Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Non-Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Approval of periodic gross price list changes for whole KO and Non-KO products range or parts thereof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination of gross list price / local conditions for single SKUs - KO for existing packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination of gross list price / local conditions for single SKUs - KO for new packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Approval of material master request for Non-KO trading goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Approval of material master request for Non-KO other items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Determination of gross list price for advertising material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Approval of KO-material master request for cross territory sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Approval of transfer price for sales transactions with other bottlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Annual approval of standard cost of sales (Intercompany transfer price within CCEJ group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory__c</fullName>
        <label>Primary COA Sub Category 1</label>
        <picklist>
            <controllingField>PrimaryCOACategory__c</controllingField>
            <picklistValues>
                <fullName>A. Purchase of Fixed Assets (Capital Expenditures)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Disposal of Fixed Assets (Sale and write-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Transfer of Fixed Assets among consolidated CCEJ locations and operations (tangible and intangible assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Revaluation or Write-off of Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Operating Leases / Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Capital Leases(excluding Vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Credit Terms / Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Operating Expenses within Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Operating Expenses in excess of Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. CCEJ One-time Integration Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. External Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Intercompany Loans (within CCEJ Group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Derivative and other Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Cash Disbursements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Loans, Loan Guarantees and Guarantees for Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Litigation, Termination and Dismissal of employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Compensation and Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Club Memberships and Other Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. Collective Labor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Charitable Donations and Political Related Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Social Amenities, Gifts, Entertainment, Congratulatory or Condolence money, and Other Courtesies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Supply, Purchase and Outsourcing Agreements (including Contract Manufacturing Arrangements)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <label>Priority Level</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procurement_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procurement_Select__c</fullName>
        <label>Procurement</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress_ratio__c</fullName>
        <label>Progress ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Classification__c</fullName>
        <label>Project classification</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Lead_from_Owner_function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead from Owner function</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OwnerUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Leader_Discussion__c</fullName>
        <label>Project Leader(Discussion)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_NO__c</fullName>
        <description>Project NO</description>
        <label>Project NO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Objectives__c</fullName>
        <label>Project Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <description>Project Title</description>
        <label>Project Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFA_No__c</fullName>
        <label>RFA No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routine_Function__c</fullName>
        <label>Routine Function</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCM_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCM_Select__c</fullName>
        <label>SCM</label>
        <picklist>
            <picklistValues>
                <fullName>Function1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Function3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondCOACategory__c</fullName>
        <label>Second COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>